# nemos_dream

./: .env.example  .gitignore  README.md  pyproject.toml
configs/stage1/: cultural_map_seed.json
configs/stage2/: translate_rewrite.yaml
data/raw/: sample_input.jsonl
data/stage2/: example_output.jsonl  stage2_rewrite.jsonl
data/stage3/: accepted.jsonl  dataset_metrics.json  dataset_metrics_with_desc.json  reject_details.json  rejected.jsonl  retry_queue.jsonl
scripts/: run_pipeline.py  run_stage.py  run_stage3_example.py  run_stage3_on_example.py
scripts/slurm/: run_stage1.sh
src/nemos_dream/: _proxy_patch.py  io_utils.py  nvidia_clients.py
src/nemos_dream/stage1_decompose_map/: _index_builder.py  _ref_filter.py  _validator.py  cultural_map.py  decompose.py  prompts.py  runner.py
src/nemos_dream/stage1_decompose_map/tools/: __init__.py  dict_lookup.py  retriever_search.py  web_search.py
src/nemos_dream/stage2_translate_rewrite/: README.md  persona_downloader.py  persona_retriever.py  pipeline_modes.py  run_step3.py  run_step4.py  runner.py
src/nemos_dream/stage3_validate/: README.md  clients.py  config.py  dataset_metrics.py  phase1_schema_dedup.py  phase2_rules.py  phase3_guardrails.py  phase4_semantic.py  phase5_judge_reward.py  phase6_self_verify.py  retry_hints.py  runner.py
tests/stage1/: test_runner.py  test_units.py
tests/stage2/: test_pipeline_modes.py
